--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
-jdk: oraclejdk8
+jdk:
+    - oraclejdk7
+    - oraclejdk8
 before_install:
     - export TERM=dumb # to get clean gradle output
 script:
